@@ -1,20 +1,0 @@
-Changes
-ignore.txt
-inc/Module/Install.pm
-inc/Module/Install/Base.pm
-inc/Module/Install/Can.pm
-inc/Module/Install/Fetch.pm
-inc/Module/Install/Makefile.pm
-inc/Module/Install/Metadata.pm
-inc/Module/Install/Win32.pm
-inc/Module/Install/WriteAll.pm
-lib/Data/Paginator.pm
-lib/Data/Paginator/Types.pm
-Makefile.PL
-MANIFEST			This list of files
-META.yml
-README
-t/00-load.t
-t/01-basic.t
-t/pageset.t
-t/simple.t
