@@ -1,0 +1,6 @@
+name    = Data-Paginator
+author  = Cory G Watson <gphat@cpan.org>
+license = Perl_5
+copyright_holder= Cory G Watson
+
+[@GPHAT]
